@@ -17,7 +17,7 @@
 			<label index="bestandenthalten">The asset is listet in the</label>
 			<label index="katalogteilweise">The asset is partially listed in the</label>
 			<label index="enthalten"></label>
-			<label index="karte">Map</label>
+			<label index="karte">Place of location</label>
 			<label index="bibliothek-filter">Search</label>
 			<label index="maptitle">Lageplan der Bibliothek</label>
 			<label index="mailtitle">Kontakt per E-Mail</label>
@@ -38,7 +38,7 @@
 			<label index="bestandenthalten">Der Bestand ist im</label>
 			<label index="katalogteilweise">Der Bestand ist teilweise im</label>
 			<label index="enthalten">enthalten</label>
-			<label index="karte">Karte</label>
+			<label index="karte">Standort der Bibliothek</label>
 			<label index="bibliothek-filter">Suche</label>
 			<label index="header">Standorte</label>
 			<label index="maptitle">Lageplan der Bibliothek</label>
