@@ -2,10 +2,8 @@
 <script type="text/javascript" src="/typo3conf/ext/standorte/Resources/Public/Js/jquery.tablesorter.min.js"></script>
 <script type="text/javascript">
     
-	$(document).ready(function()
-    {
-        $("#daten").tablesorter();
-
+	$(document).ready(function() {
+	$("#daten").tablesorter();
 
 		$('.icons .delete').click(function(){
 
