@@ -1,48 +1,0 @@
-<!-- $Id$ -->
-
-<f:layout name="defaultLayout" />
-
-<f:section name="bibos">INDEX
-	<f:for each="{bibos}" as="bibo">
-		<h3>{bibo.titel}</h3>
-		{bibo.fakultaet}
-		<dl>
-			<dt>Bibliothekssigel</dt>
-			<dd>7/{bibo.sigel}</dd>
-		</dl>
-		<div class="clear"></div>
-		<dl>
-			<dt>Anschrift</dt>
-			<dd>{bibo.strasse}<br />{bibo.plz} {bibo.ort}</dd>
-		</dl>
-		<dl>
-			<dt>Kontakt</dt>
-			<dd>{bibo.telefon}</dd>
-		</dl>
-		<dl>
-			<dt>&Ouml;ffnungszeiten</dt>
-			<dd>{bibo.oeffnungszeiten}</dd>
-		</dl>
-		<dl>
-			<dt>Bibliotheksbeauftragte</dt>
-			<dd>{bibo.ansprechpartner}</dd>
-		</dl>
-		<dl>
-			<dt>Best&auml;nde</dt>
-			<dd>{bibo.bestaende}</dd>
-		</dl>
-		<dl>
-			<dt>Katalog</dt>
-			<dd>{bibo.katalog}</dd>
-		</dl>
-	</f:for>
-
-	<f:link.action action="new" arguments="{bibliothek : bibliothek}">Neue Bibo</f:link.action>
-
-	<f:link.action action="new" controller="Fakultaet">Neue Fakultaet</f:link.action>
-
-
-
-</f:section>
-
-
