@@ -4,76 +4,6 @@
 
 <f:section name="bibos">
 
-	<div class="list" id="bibliothek-{bibo.uid}" lat="{bibo.lat}" lon="{bibo.lon}">
+	<f:render partial="Bibliothek" arguments="{_all}" />
 
-		<!-- Bild -->
-		<f:render partial="bild" arguments="{bild: bibo.bild,titel: bibo.titel}"/>
-		<!-- /Bild -->
-
-		<h2>{bibo.titel}</h2>
-
-		<f:if condition="{bibo.extlink}">
-			<f:then>
-				<br />
-				<f:link.external uri="{bibo.extlink}">{bibo.extlink}</f:link.external>
-			</f:then>
-		</f:if>
-		<dl>
-			<!-- Sigel -->
-			<dt><f:translate key="bibliothekssigel" /></dt>
-			<dd><p class="bodytext"><f:render partial="sigel" arguments="{sigel: bibo.sigel}"/> ({bibo.fakultaet.titel})
-			</dd>
-			<!-- /Sigel -->
-
-			<!-- Anschrift -->
-			<f:if condition="{bibo.strasse}">
-				<dt><f:translate key="anschrift" /></dt>
-				<dd><p class="bodytext">{bibo.strasse}<br />
-				<f:if condition="{bibo.adresszusatz}">
-					<f:then>
-						{bibo.adresszusatz}
-						<br />
-					</f:then>
-				</f:if>
-					{bibo.plz} {bibo.ort}</p>
-				<a class="map" id="cl-{bibo.uid}" title="{f:translate(key:'maptitle')}"><f:translate key="karte" />
-					<div id="map-{bibo.uid}" class="karte"></div></a>
-				</dd>
-			</f:if>
-			<!-- /Anschrift -->
-
-			<!--Oeffnungszeiten-->
-			<dt><f:translate key="oeffnung" /></dt>
-			<dd>
-			<f:format.html>{bibo.oeffnungszeiten}</f:format.html>
-			</dd>
-			<!--/Oeffnungszeiten-->
-
-			<!-- Kontakt -->
-			<dt><f:translate key="kontakt" /></dt>
-			<dd><f:format.html>{bibo.ansprechpartner}</f:format.html></dd>
-			<!-- /Kontakt -->
-
-			<!-- Bestand -->
-			<f:if condition="{bibo.bestand}">
-				<f:then>
-					<dt><f:translate key="bestand" /></dt>
-					<dd><p class="bodytext">{bibo.bestand}
-					<f:render partial="bestand" arguments="{institutskatalog:bibo.institutskatalog, katalog:bibo.katalog, katalogteilweise:bibo.katalogteilweise}"/>
-					</p></dd>
-				</f:then>
-			</f:if>
-			<!-- /Bestand -->
-
-			<!-- Zusatzinformationen -->
-			<f:if condition="{bibo.zusatzinformationen}">
-				<f:then>
-					<dt><f:translate key="zusatzinformationen" /></dt>
-					<dd><f:format.html>{bibo.zusatzinformationen}</f:format.html></dd>
-				</f:then>
-			</f:if>
-			<!-- /Zusatzinformationen -->
-
-		</dl>
-	</div>
 </f:section>
