@@ -1,5 +1,6 @@
 2012-03-12 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
 	* Titel fuer die Sortierung entfernt und Sortierung nach Sigeln vorgenommen (WWW-1144)
+	* Layout der Single Ansicht optimiert (WWW-1102)
 
 2012-03-05 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
 	* Titel der Detailseiten geaendert (WWW-1103)
